--- a/css/style.css
+++ b/css/style.css
@@ -352,30 +352,36 @@ header .fa-arrow-left:hover {
   background: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
   background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
   font-size: 1em;
+  cursor: pointer;
   color: white;
   -webkit-box-shadow: 0px 3px 10px #ccc;
           box-shadow: 0px 3px 10px #ccc;
   margin: 10px 0 57px 0;
-  -webkit-transition-property: opacity;
-  transition-property: opacity;
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
   transition-property: box-shadow;
   transition-property: box-shadow, -webkit-box-shadow;
+  -webkit-transition-property: -webkit-filter;
+  transition-property: -webkit-filter;
+  transition-property: filter;
+  transition-property: filter, -webkit-filter;
   -webkit-transition-duration: 100ms;
           transition-duration: 100ms;
-  -webkit-transition-delay: 100ms;
-          transition-delay: 100ms;
 }
 
 .btn:hover {
-  opacity: 80%;
-  -webkit-box-shadow: 0px 3px 10px #353535;
-          box-shadow: 0px 3px 10px #353535;
+  -webkit-filter: brightness(1.15);
+          filter: brightness(1.15);
+  -webkit-box-shadow: 0px 1px 5px #353535;
+          box-shadow: 0px 1px 5px #353535;
 }
 
 .fonctionnement {
   background-color: white;
+}
+
+.btn__fonctionnement {
+  cursor: pointer;
 }
 
 .fonctionnement {
@@ -423,9 +429,10 @@ header .fa-arrow-left:hover {
 }
 
 .btn__fonctionnement:hover {
-  opacity: 80%;
-  -webkit-box-shadow: 0px 3px 10px #353535;
-          box-shadow: 0px 3px 10px #353535;
+  -webkit-filter: brightness(1.15);
+          filter: brightness(1.15);
+  -webkit-box-shadow: 0px 1px 5px #353535;
+          box-shadow: 0px 1px 5px #353535;
 }
 
 .btn__fonctionnement:hover .fa-mobile-alt, .btn__fonctionnement:hover .fa-list-ul, .btn__fonctionnement:hover .fa-store {
@@ -526,9 +533,10 @@ header .fa-arrow-left:hover {
 }
 
 .cartes__restaurants:hover {
-  opacity: 80%;
-  -webkit-box-shadow: 0px 3px 10px #353535;
-          box-shadow: 0px 3px 10px #353535;
+  -webkit-filter: brightness(1.15);
+          filter: brightness(1.15);
+  -webkit-box-shadow: 0px 1px 5px #353535;
+          box-shadow: 0px 1px 5px #353535;
 }
 
 .cartes__restaurants__id {
@@ -608,7 +616,7 @@ header .fa-arrow-left:hover {
           justify-content: center;
   position: relative;
   top: -180px;
-  left: 25px;
+  left: 70px;
   width: 80px;
   height: 30px;
   background-color: #99E2D0;
@@ -738,9 +746,10 @@ footer a:hover {
 }
 
 .menu__item:hover {
-  opacity: 80%;
-  -webkit-box-shadow: 0px 3px 10px #353535;
-          box-shadow: 0px 3px 10px #353535;
+  -webkit-filter: brightness(1.15);
+          filter: brightness(1.15);
+  -webkit-box-shadow: 0px 1px 5px #353535;
+          box-shadow: 0px 1px 5px #353535;
 }
 
 .menu__item:hover .check {
@@ -848,6 +857,8 @@ footer a:hover {
   width: 80px;
   border-radius: 0 20px 20px 0;
   background-color: #99E2D0;
+  -webkit-filter: brightness(1);
+          filter: brightness(1);
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
   -webkit-transition: -webkit-transform 300ms ease-in-out;
@@ -867,10 +878,14 @@ footer a:hover {
   0% {
     opacity: 0;
     top: 10px;
+    -webkit-filter: brightness(1);
+            filter: brightness(1);
   }
   100% {
     opacity: 1;
     top: 0px;
+    -webkit-filter: brightness(1);
+            filter: brightness(1);
   }
 }
 
@@ -878,10 +893,14 @@ footer a:hover {
   0% {
     opacity: 0;
     top: 10px;
+    -webkit-filter: brightness(1);
+            filter: brightness(1);
   }
   100% {
     opacity: 1;
     top: 0px;
+    -webkit-filter: brightness(1);
+            filter: brightness(1);
   }
 }
 
