--- a/css/_restaurants_menu.scss
+++ b/css/_restaurants_menu.scss
@@ -121,6 +121,7 @@
     width: 80px;
     border-radius: 0 20px 20px 0;
     background-color: $tertiary-color;
+    filter: brightness(1);
     transform: scaleX(0);
     transition: transform 300ms ease-in-out;
     transform-origin: right;
@@ -133,8 +134,8 @@
 //Animations 
 
 @keyframes slide {
-    0% { opacity: 0; top: 10px; }
-    100% { opacity: 1; top: 0px; }
+    0% { opacity: 0; top: 10px; filter: brightness(1);}
+    100% { opacity: 1; top: 0px; filter: brightness(1); }
 }
 
 @keyframes roll {
