--- a/css/_loader.scss
+++ b/css/_loader.scss
@@ -10,13 +10,18 @@
     & .fa-utensils {
       position: relative;
       opacity: 0.5;
-      top: -260px;
-      left: 10px;
+      top: -80px;
+      left: -150px;
       font-size: 3em;
       color: white;
       z-index: 4;
       animation: color 3s 1 forwards;
     }
+}
+
+.container__loader {
+  @include flexMid;
+  max-height: 200px;
 }
 
 .loader__rotative {
@@ -33,8 +38,8 @@
 
 .loader__rotative_small {
   position: relative;
-  top: -160px;
-  left: 0;
+  top: 20px;
+  left: -155px;
   width: 120px;
   height: 120px;
   border-radius: 50%;
