--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,31 @@ a:hover {
 .loader .fa-utensils {
   position: relative;
   opacity: 0.5;
-  top: -260px;
-  left: 10px;
+  top: -80px;
+  left: -150px;
   font-size: 3em;
   color: white;
   z-index: 4;
   -webkit-animation: color 3s 1 forwards;
           animation: color 3s 1 forwards;
+}
+
+.container__loader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  max-height: 200px;
 }
 
 .loader__rotative {
@@ -83,8 +101,8 @@ a:hover {
 
 .loader__rotative_small {
   position: relative;
-  top: -160px;
-  left: 0;
+  top: 20px;
+  left: -155px;
   width: 120px;
   height: 120px;
   border-radius: 50%;
