--- a/css/_restaurants_menu.scss
+++ b/css/_restaurants_menu.scss
@@ -44,6 +44,7 @@
     border-radius: 20px;
     max-width: 100%;
     padding: 20px;
+    cursor: pointer;
     opacity: 0;
     z-index: 5;
     box-sizing: border-box;
