--- a/css/style.css
+++ b/css/style.css
@@ -736,6 +736,7 @@ footer a:hover {
   border-radius: 20px;
   max-width: 100%;
   padding: 20px;
+  cursor: pointer;
   opacity: 0;
   z-index: 5;
   -webkit-box-sizing: border-box;
