--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@ a:hover {
   height: 120px;
   border-radius: 50%;
   border: 10px solid transparent;
-  border-left: 5px dashed #99E2D0;
-  border-right: 5px dashed #99E2D0;
+  border-left: 5px solid #99E2D0;
+  border-right: 5px solid #99E2D0;
   z-index: 3;
   -webkit-animation: spinner 3s infinite;
           animation: spinner 3s infinite;
