--- a/css/_restaurants_menu.scss
+++ b/css/_restaurants_menu.scss
@@ -34,6 +34,25 @@
             font-size: 1.5em;
             width: 23px;
             height: 23px;
+            & .fas {
+                display: flex;
+                flex-flow: row wrap;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                height: 24px;
+                width: 24px;
+                opacity: 0;
+                background: -webkit-linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                transition: opacity 0.5s;
+                    &:hover {
+                        opacity: 1;
+                }
+            }
         }
 }
 
