--- a/css/_restaurants_menu.scss
+++ b/css/_restaurants_menu.scss
@@ -8,13 +8,11 @@
 
 .menu__container {
     position: relative;
-    top: -30px;
+    top: -60px;
     background-color: $background-color-light;
-    border-radius: 30px 30px 0 0;
     width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-        
+    padding: 0 10px 10px 10px;
+    box-sizing: border-box;  
 }
 
 .menu__title {
@@ -22,6 +20,10 @@
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    background-color: $background-color-light;
+    top: -30px;
+    border-radius: 30px 30px 0 0;
     padding: 20px;
         & h2 {
             font-family: 'Shrikhand', cursive;
