--- a/css/style.css
+++ b/css/style.css
@@ -689,11 +689,10 @@ footer a:hover {
 
 .menu__container {
   position: relative;
-  top: -30px;
+  top: -60px;
   background-color: #F6F6F6;
-  border-radius: 30px 30px 0 0;
   width: 100%;
-  padding: 10px;
+  padding: 0 10px 10px 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -712,6 +711,10 @@ footer a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+  background-color: #F6F6F6;
+  top: -30px;
+  border-radius: 30px 30px 0 0;
   padding: 20px;
 }
 
