--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,7 @@ header .fa-arrow-left:hover {
 }
 
 .fonctionnement {
-  padding: 2em;
+  padding: 20px;
 }
 
 .menu {
@@ -433,12 +433,14 @@ header .fa-arrow-left:hover {
           flex-flow: row wrap;
   -ms-flex-line-pack: center;
       align-content: center;
+  position: relative;
+  left: 10px;
   -webkit-box-shadow: 0px 3px 10px #ccc;
           box-shadow: 0px 3px 10px #ccc;
   font-size: 1em;
   font-weight: bold;
   color: black;
-  width: 325px;
+  width: 318px;
   height: 75px;
   border: none;
   border-radius: 20px;
